--- a/Forever Memories/pages/packages.HTML
+++ b/Forever Memories/pages/packages.HTML
@@ -115,37 +115,38 @@
     <!-- buttons end -->
 
     <!-- On tables -->
-
-    <table class="table table-dark table-striped">
-      <tr>
-        <td>package</td>
-        <td>duration</td>
-        <td>number of pictures</td>
-        <td>price</td>
-        <td>extra time</td>
-      </tr>
-      <tr>
-        <td>the basic</td>
-        <td>15mins</td>
-        <td>10</td>
-        <td>20$</td>
-        <td>15min</td>
-      </tr>
-      <tr>
-        <td>standard</td>
-        <td>30min</td>
-        <td>15</td>
-        <td>45$</td>
-        <td>15min</td>
-      </tr>
-      <tr>
-        <td>the star</td>
-        <td>1hr</td>
-        <td>25</td>
-        <td>95$</td>
-        <td>25min</td>
-      </tr>
-    </table>
+    <div class="table-responsive" id="pack">
+      <table class="table table-dark table-striped" class="table align-middle">
+        <tr>
+          <td class="h3" id="gri1">package</td>
+          <td class="h3" id="gri2">duration</td>
+          <td class="h3" id="gri3">number of pictures</td>
+          <td class="h3" id="gri4">price</td>
+          <td class="h3" id="gri5">extra time</td>
+        </tr>
+        <tr>
+          <td>the basic</td>
+          <td>15mins</td>
+          <td>10</td>
+          <td>20$</td>
+          <td>15min</td>
+        </tr>
+        <tr>
+          <td>standard</td>
+          <td>30min</td>
+          <td>15</td>
+          <td>45$</td>
+          <td>15min</td>
+        </tr>
+        <tr>
+          <td>the star</td>
+          <td>1hr</td>
+          <td>25</td>
+          <td>95$</td>
+          <td>25min</td>
+        </tr>
+      </table>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
