--- a/Forever Memories/pages/index.HTML
+++ b/Forever Memories/pages/index.HTML
@@ -118,7 +118,7 @@
       <div class="row">
         <div class="col" id="aboutMe">About me.</div>
         <div class="col">Column</div>
-        <div class="col">Column</div>
+        <div class="col">what i want for the company</div>
       </div>
       <!-- pic slide start -->
       <div
