--- a/Forever Memories/pages/message.HTML
+++ b/Forever Memories/pages/message.HTML
@@ -122,7 +122,7 @@
       </div>
       <div class="row">
         <div class="col">Column</div>
-        <div class="col">Column</div>
+        <div class="col"></div>
         <div class="col">Column</div>
       </div>
       <div class="row">
