--- a/Forever Memories/pages/packages.HTML
+++ b/Forever Memories/pages/packages.HTML
@@ -113,7 +113,11 @@
       </div>
     </div>
     <!-- buttons end -->
-
+    <h3 id="packInfo">Package info</h3>
+    <p id="packInfo">
+      These packages can change depending on what your looking for. <br />When
+      you make up your minde give us a message ,and we can discuss your needs.
+    </p>
     <!-- On tables -->
     <div class="table-responsive" id="pack">
       <table class="table table-dark table-striped" class="table align-middle">
@@ -126,28 +130,130 @@
         </tr>
         <tr>
           <td>the basic</td>
-          <td>15mins</td>
+          <td>30mins</td>
           <td>10</td>
-          <td>20$</td>
+          <td>75$</td>
           <td>15min</td>
         </tr>
         <tr>
           <td>standard</td>
-          <td>30min</td>
+          <td>1hr</td>
           <td>15</td>
-          <td>45$</td>
+          <td>120$</td>
           <td>15min</td>
         </tr>
         <tr>
           <td>the star</td>
-          <td>1hr</td>
+          <td>2hr</td>
           <td>25</td>
-          <td>95$</td>
+          <td>185$</td>
           <td>25min</td>
         </tr>
       </table>
     </div>
+    <!-- checkout start -->
+    <div id="pack">
+      <div class="input-group mb-3">
+        <label class="input-group-text" for="inputGroupSelect01"
+          >Packages</label
+        >
+        <select class="form-select" id="inputGroupSelect01">
+          <option selected>Choose your package</option>
+          <option value="1">The basic</option>
+          <option value="2">Standard</option>
+          <option value="3">The star</option>
+        </select>
+      </div>
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          value=""
+          id="flexCheckDefault"
+        />
+        <label class="form-check-label" for="flexCheckDefault">
+          No extra time
+        </label>
+      </div>
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          value=""
+          id="flexCheckChecked"
+          checked
+        />
+        <label class="form-check-label" for="flexCheckChecked">
+          Extra time
+        </label>
+      </div>
+      <div class="input-group mb-3">
+        <span class="input-group-text" id="basic-addon1">@</span>
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Username"
+          aria-label="Username"
+          aria-describedby="basic-addon1"
+        />
+      </div>
 
+      <div class="input-group mb-3">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Recipient's username"
+          aria-label="Recipient's username"
+          aria-describedby="basic-addon2"
+        />
+        <span class="input-group-text" id="basic-addon2">@example.com</span>
+      </div>
+
+      <label for="basic-url" class="form-label">Your vanity URL</label>
+      <div class="input-group mb-3">
+        <span class="input-group-text" id="basic-addon3"
+          >https://example.com/users/</span
+        >
+        <input
+          type="text"
+          class="form-control"
+          id="basic-url"
+          aria-describedby="basic-addon3"
+        />
+      </div>
+
+      <div class="input-group mb-3">
+        <span class="input-group-text">$</span>
+        <input
+          type="text"
+          class="form-control"
+          aria-label="Amount (to the nearest dollar)"
+        />
+        <span class="input-group-text">.00</span>
+      </div>
+
+      <div class="input-group mb-3">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Username"
+          aria-label="Username"
+        />
+        <span class="input-group-text">@</span>
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Server"
+          aria-label="Server"
+        />
+      </div>
+
+      <div class="input-group">
+        <span class="input-group-text">With textarea</span>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+      </div>
+    </div>
+    <!-- checkout end -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
